--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ Media Queries for TABs:
     .main-container{
         grid-template-columns: 280px 280px;
     }
-
+.main-container2{
+        grid-template-columns: 280px 280px;
+    }
    
 
 
@@ -18,6 +20,9 @@ Media Queries for MOBILEs:
 @media only screen and (max-width: 688px){
     
     .main-container{
+        grid-template-columns: 280px;
+    }
+.main-container2{
         grid-template-columns: 280px;
     }
 }
